[tool.poetry]
name = "concurrency-stuff"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "concurrency_stuff"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
pyspark = "^3.3.1"
requests = "^2.28.1"
black = "^22.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
